fixing align center

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
   height: 120px;
   margin: 0 auto;
   justify-content: center;
-  align-items: start;
+  align-items: center;
   gap: 10px;
   
 }
@@ -34,6 +34,13 @@ body {
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
+}
+.checkbox-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 10px;
 }
 .row input{
   width: 20px;
